[gd_scene load_steps=5 format=3 uid="uid://dki5bbyx48u21"]

[ext_resource type="Script" path="res://weapons/katana2.gd" id="1_2a302"]
[ext_resource type="PackedScene" uid="uid://c6d3xfvcu8km3" path="res://weapons/sword.glb" id="2_1k2cn"]
[ext_resource type="AudioStream" uid="uid://dcak2f6e7fmow" path="res://sounds/weapon/drawKnife2.ogg" id="3_pk10n"]

[sub_resource type="BoxShape3D" id="BoxShape3D_mvl4y"]
size = Vector3(0.1, 1.2, 0.3)

[node name="katana2" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.151759, 0)
script = ExtResource("1_2a302")

[node name="hand" type="Node3D" parent="."]
transform = Transform3D(0.999999, 0, 0, 0, 1, 0, 0, 0, 0.999999, 0, 0, 0)

[node name="sword" parent="hand" instance=ExtResource("2_1k2cn")]

[node name="Area3D" type="Area3D" parent="hand"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.803239, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="hand/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.18153, 0)
shape = SubResource("BoxShape3D_mvl4y")

[node name="RigidBody3D" type="RigidBody3D" parent="hand"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.817238, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="hand/RigidBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.147949, 0)
shape = SubResource("BoxShape3D_mvl4y")
disabled = true

[node name="attackAudioStreamPlayer" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_pk10n")
unit_size = 15.0
bus = &"Effects"
doppler_tracking = 2

[connection signal="body_entered" from="hand/Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_entered" from="hand/RigidBody3D" to="." method="_on_rigid_body_3d_body_entered"]
